Manage year data in PlayerResult